--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,33 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title></title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+  <div class="top">
+    <div class="home"> 
+      <div class="topic">
+        hi, i am
+      </div>
+      <% @users.each do |u| %>
+        <a href=<%= users_path(id: u.id) %>>
+       	  <div class="topic2">
+            <%= u.FirstName %>
+            <%= u.LastName %>
+          </div>
+        </a>
+      <% end %>
+    </div>
+  </div>
+  <div class="introduction">
+    <div class="introductiontext">
+    </div>
+  </div>
+  <div class="bottom">
+    <div class="details">
+      <a href='/'><img src="/home.png" style="position: absolute; width:10%;height:100%left: 25%;right: 75%;"> </a>
+    </div>
+  </div>
+</body>
+</html>
