--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
-  background-image: url("background.png");
+  background-image: url("/background.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
