update home page add instagram url to users

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,6 +17,7 @@
         <i class="fa fa-phone-square" style="font-size:24px"> <%= @users.Phone %></i>
         <br><br>
         <a href=<%= @users.linkedin %>><i class="fa fa-linkedin-square" style="font-size:36px;color:#33679e"></i></a>
+        <a href=<%= @users.instagram %>><i class="fa fa-instagram" style="font-size:36px;color:#33679e"></i></a>
       </div>
     </div>
   </div>
