--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -39,7 +39,6 @@ div.topic {
   font-size: 90px;
   color: #e9e5e5;
   text-align: left;
-  color: #e9e5e5;
 }
 
 div.topic2 {
@@ -47,7 +46,12 @@ div.topic2 {
   color: #e9e5e5;
   font-style: italic;
   text-align: center;
+}
+
+div.topic3 {
+  font-size: 10px;
   color: #e9e5e5;
+  text-align: right;
 }
 
 div.top {
@@ -57,6 +61,17 @@ div.top {
   right: 10%;
   top: 5%;
   background-color: #699ed5;
+}
+
+button {
+    background-color: #699ed5;
+    border: 2px solid #e9e5e5;
+    color: #e9e5e5;
+    border-radius: 8px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 15px;
+    cursor: pointer;
 }
 
 div.introduction{
@@ -72,6 +87,19 @@ div.introduction{
   border-left-color: #e9e5e5;
   border-right-color: #e9e5e5;
   border-bottom-color: #699ed5;
+}
+
+div.introductionphoto{
+  background-image: url("/piano.png");
+  background-repeat: repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-color: #ffffff;
+  position: absolute;
+  height: 20%;
+  left: 10%;
+  right: 10%;
+  top: 67%;
 }
 
 div.bottom {
@@ -115,7 +143,6 @@ div.home {
   left: 10%;
   right: 10%;
   top: 10%;
-
 }
 
 div.profiletext{
